--- a/style.css
+++ b/style.css
@@ -1,68 +1,51 @@
-:root {
-    --navhight:20%
-}
 body { background-color:black}
 p,h1,h2,h3,h4,h5,h6 {color:white}
+
 #main-title { 
     text-align:center;
-
+    float:none;
 }
-nav { 
-    height:20%;
-    width:50%;
-    content: "";
-    clear: both;
-    display: table;
+nav {
+    /*position:fixed;  need to make sticky nav bar with js */
+    border: 5px outset white;
+    border-radius:5px;
+    width:50vw; 
+    height:10vh;
+    min-width: none; /* need to asign later */
+    min-height: none;
+    background-color: lightskyblue;
 }
 
+#unhidden {
+    display:block;
+}
+#hidden {
+    display:none;
+}
 nav ul {
+    margin:0;
     list-style: none;
-    padding:0;
-    margin:0;
-    display: inline-block;
-    height:100%
-}
-
-nav li {
-    height:100%
-}
-.mainli {
-    font-size: 1.2em;
-    line-height: 0;
-    width: 18%;
-    margin-left:2%;
-    display: inline-block;
-}
-#closeli {
-    font-size: 1.2em;
-    line-height: 0;
-    margin-left:2%;
-    display: inline-block;
-}
-
-#logo-container {
-    background-color: blueviolet;
-    width:20%;
-    float:left;
-    margin:0;
-}
-#button-container {
-    background-color: pink;
-    width:80%;
-    float:right;
-}
-#slideshow-container { 
-    color:white; 
+    padding-inline-start:0;
+    width:inherit;
+    height:inherit;
     
 }
-#logo {
-    object-fit:contain;
-    border-radius:100%;
-    max-width:100%;
-    max-height:100%;
+nav > ul > li, .mainli {
+    height: 100%;
+    margin-right: 0;
+    display: inline-block;
+    vertical-align:top;
 }
-nav button {
-    background-color: lightgray;
-    max-width:100%;
-    max-height:100%;
+#logo_li {width:10vh;}
+#button_li {width:calc(50vw - 10vh - 5px);} /* fix at a later date */
+#logo {
+    height:100%;
+    width:100%;
+    background-image: url("https://img.freepik.com/premium-vector/satellite-logo_10250-1078.jpg?w=2000");
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 50%;
+}
+button {
+    vertical-align:middle;
 }
