--- a/style.css
+++ b/style.css
@@ -1,10 +1,7 @@
 body { background-color:black}
 p,h1,h2,h3,h4,h5,h6 {color:white}
 
-#main-title { 
-    text-align:center;
-    float:none;
-}
+/* nav bar css */
 nav {
     /*position:fixed;  need to make sticky nav bar with js */
     border: 5px outset white;
@@ -48,4 +45,67 @@ nav > ul > li, .mainli {
 }
 button {
     vertical-align:middle;
+}
+
+/* header css */
+header > h1 {
+    text-align:center;
+}
+header > div {
+    height:60vh;
+    width:80vw;
+    max-width: 700px;
+    max-height: 700px;
+    margin:auto;
+    position:relative;
+    border: 5px solid white;
+}
+
+header > div > div {
+    background-size: contain;
+    background-repeat: no-repeat;
+    height:inherit;
+    width:inherit;
+}
+.numbering {
+    position: absolute; 
+    top: 0; 
+    left: 0;
+    margin:2%;
+}
+.caption {
+    position: absolute; 
+    bottom: 0; 
+    left: 0; 
+    width: 100%; 
+    text-align: center;
+}
+.slide-show-button {
+    height:5%;
+    margin:30%;
+}
+.backbutton {
+    position: absolute; 
+    left: 0;
+}
+.forwardbutton{
+    position: absolute; 
+    right: 0;
+}
+#slide-one {
+    display:block;
+    background-image: url("https://media.istockphoto.com/id/1324502848/photo/spaceship-on-orbit-of-planet-earth-view-from-iss-station-exploration-of-solar-system-sci-fi.jpg?b=1&s=170667a&w=0&k=20&c=c8M69amWdOzLOZuvUOmmtpzdf86aOB2oMZrsWn_AD7Q=");
+}
+
+#slide-two {
+    display:none;
+    background-image: url("https://d2908q01vomqb2.cloudfront.net/9e6a55b6b4563e652a23be9d623ca5055c356940/2022/05/17/virtualizing-satellite-ground-segment-aws-1200x600-1.jpg");
+}
+#slide-three {
+    display:none;
+    background-image: url("https://castnav.com/wp-content/uploads/2019/04/Outer-space-satellite.jpg");
+}
+#slide-four {
+    display:none;
+    background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.co.uk%2Fpin%2F713398397211160792%2F&psig=AOvVaw1vOHxAk-PXmFAELbNOSpVQ&ust=1670668553600000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCNC_q7-r7PsCFQAAAAAdAAAAABAS")
 }
