--- a/style.css
+++ b/style.css
@@ -1,131 +1,206 @@
-body { background-color:black}
+body { 
+    background-color:black;
+    margin:0;
+}
 p,h1,h2,h3,h4,h5,h6 {color:white}
 
-/* nav bar css */
 nav {
-    /*position:fixed;  need to make sticky nav bar with js */
-    border: 5px outset white;
-    border-radius:5px;
-    width:50vw; 
-    height:10vh;
-    min-width: none; /* need to asign later */
-    min-height: none;
-    background-color: lightskyblue;
+    width:100%;
+	height:14vh;
+    background-color:rgb(43, 43, 131);
+	position:fixed;
 }
-
-#unhidden {
-    display:block;
+nav > div {
+	border-radius: 50%;
+	height:10vh;
+	width:10vh;
+	background-color:rgb(255, 255, 255);
+	margin:2vh;
+	display:inline-block;
+	overflow:hidden;
 }
-#hidden {
-    display:none;
+img {
+	max-width:100%;
+	max-height:100%;
+	display:block;
+	margin:auto;
+}
+nav h1 {
+	display:inline-block;
+	position:absolute;
+	left:14vh;
+	font-size:5vh;
+	vertical-align: middle;
 }
 nav ul {
-    margin:0;
-    list-style: none;
-    padding-inline-start:0;
-    width:inherit;
-    height:inherit;
-    
+	position:absolute;
+	display:inline-block;
+	margin:0;
+	padding:0;
+	right:0;
 }
-nav > ul > li, .mainli {
-    height: 100%;
-    margin-right: 0;
-    display: inline-block;
-    vertical-align:top;
+nav li {
+	display:inline-block;
 }
-#logo_li {width:10vh;}
-#button_li {width:calc(50vw - 10vh - 5px);} /* fix at a later date */
-#logo {
-    height:100%;
-    width:100%;
-    background-image: url("https://img.freepik.com/premium-vector/satellite-logo_10250-1078.jpg?w=2000");
-    background-size: contain;
-    background-repeat: no-repeat;
-    border-radius: 50%;
+li > button {
+	padding:0;
+	border:0.5vw outset blueviolet;
+	margin:2.5vh 0.5vh;
+	background-color:rgb(154, 154, 253);
+	text-decoration: none;
+	border-radius: 1vw;
 }
-button {
-    vertical-align:middle;
+
+button > a {
+	padding:3vh;
+	display:block;
+	text-decoration: none;
+	
+}
+
+#spacer {
+	margin:0;
+	height:14vh;
+	width:100%;
 }
 
 /* header css */
-   
-  /* Styling the area of the slides */
-  #slideshow {
+
+#slideshow {
     overflow: hidden;
-    height: 510px;
-    width: 728px;
+    height: 60vh;
+    width: 100%;
     margin: 0 auto;
-  }
-   
-  /* Style each of the sides
-  with a fixed width and height */
-  .slide {
+}
+/* Style each of the sides
+with a fixed width and height */
+.slide {
     float: left;
-    height: 510px;
-    width: 728px;
-  }
+    height: 60vh;
+    width: 25%;
+}
+ 
+/* Add animation to the slides */
+.slide-wrapper {
    
-  /* Add animation to the slides */
-  .slide-wrapper {
-     
-  /* Calculate the total width on the
-    basis of number of slides */
-    width: calc(728px * 4);
-   
-  /* Specify the animation with the
-    duration and speed */
-    animation: slide 10s ease infinite;
-  }
-   
-  /* Set the background color
-  of each of the slides */
-  .slide:nth-child(1) {
+/* Calculate the total width on the
+  basis of number of slides */
+    width: calc(100% * 4);
+ 
+/* Specify the animation with the
+  duration and speed */
+    animation: slide 20s ease infinite;
+}
+ 
+/* Set the background color
+of each of the slides */
+.slide:nth-child(1) {
     background: green;
     background-image: url("https://media.istockphoto.com/id/1324502848/photo/spaceship-on-orbit-of-planet-earth-view-from-iss-station-exploration-of-solar-system-sci-fi.jpg?b=1&s=170667a&w=0&k=20&c=c8M69amWdOzLOZuvUOmmtpzdf86aOB2oMZrsWn_AD7Q=");
     background-repeat: no-repeat;
     background-size: contain;
-  }
-   
-  .slide:nth-child(2) {
+}
+ 
+.slide:nth-child(2) {
     background: pink;
     background-image: url("https://d2908q01vomqb2.cloudfront.net/9e6a55b6b4563e652a23be9d623ca5055c356940/2022/05/17/virtualizing-satellite-ground-segment-aws-1200x600-1.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-  }
-   
-  .slide:nth-child(3) {
+}
+ 
+.slide:nth-child(3) {
     background: red;
     background-image: url("https://castnav.com/wp-content/uploads/2019/04/Outer-space-satellite.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-  }
-   
-  .slide:nth-child(4) {
+}
+ 
+.slide:nth-child(4) {
     background: yellow;
     background-image: url("https://images6.alphacoders.com/373/thumb-1920-373654.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-  }
+}
+ 
+/* Define the animation
+for the slideshow */
+@keyframes slide {
    
-  /* Define the animation
-  for the slideshow */
-  @keyframes slide {
-     
-  /* Calculate the margin-left for
-    each of the slides */
+/* Calculate the margin-left for
+  each of the slides */
     20% {
-      margin-left: 0px;
+        margin-left: 0px;
     }
-   
+ 
     40% {
-      margin-left: calc(-728px * 1);
+        margin-left: calc(-100% * 1);
     }
-   
+ 
     60% {
-      margin-left: calc(-728px * 2);
+        margin-left: calc(-100% * 2);
     }
-   
+ 
     80% {
-      margin-left: calc(-728px * 3);
-    }
-  }
+        margin-left: calc(-100% * 3);
+    } 
+}
+
+
+
+
+/* article */
+article {
+	width:70vw;
+	margin:auto;
+	position:relative;
+	overflow:auto;
+
+}
+article > div:nth-child(1) {
+	float:left;
+	width:30%;
+}
+article > div:nth-child(2) {
+	float:right;
+	width:68%;
+}
+
+#article-img > div {
+	width:90%;
+	height:30%;
+	overflow:hidden;
+	border-radius: 5%;
+	border:2px solid white;
+	display:block;
+	margin:5%;
+}
+
+/* footer */
+footer {
+	background-color:rgb(49, 49, 49);
+	margin:0;
+	overflow:auto;
+}
+footer > div {
+	border:2px solid white;
+	overflow:hidden;
+	vertical-align: top;
+	
+}
+footer > div:nth-child(1) {
+	display:inline-block;
+	width:33%;
+}
+footer > div:nth-child(2) {
+	display:inline-block;
+	width:65%;
+}
+footer > div > div {
+	display:inline-block;
+	width:49%;
+	vertical-align: top;
+}
+footer li{
+	list-style:url('/pictures/rocket_adobe_express.svg');
+	
+}
